fix chip alignment in IE11 (#66)

--- a/packages/neptune-css/src/less/chip.less
+++ b/packages/neptune-css/src/less/chip.less
@@ -6,9 +6,10 @@
   color: @brand-navy;
   background: @brand-smoke-plus-10;
   line-height: 0;
+  font-size: @font-size-base;
   margin: @spacer (@spacer / 2) 0 0;
   padding: 1px @spacer 0 (@spacer * 2);
-  min-height: (@spacer * 4);
+  height: (@spacer * 4);
   border-radius: 100px;
 
   &.active {
